# input

./: .gitmodules  CMakeLists.txt  README.md
cmake/: compile.cmake  os.cmake
example/: CMakeLists.txt  main.c  main.cpp
example/cmake/: add_example.cmake
glug_input/: CMakeLists.txt
glug_input/cmake/: add_gluglib.cmake  set_rpaths.cmake
glug_input/include/glug/: input.h
glug_input/include/glug/input/: keyboard.h  mouse.h
glug_input/include/glug/input/keyboard/: keyboard.h  keys.h  locks.h  mods.h
glug_input/include/glug/input/mouse/: buttons.h  mouse.h  point_t.h
glug_input/include/glug_input/: config.hpp  export.h  export.hpp  joystick.hpp  keyboard.h  keyboard.hpp  mouse.h  mouse.hpp
glug_input/include/glug_input/event/: event.hpp  event_queue.hpp  event_type.hpp  key_event.hpp
glug_input/include/glug_input/joystick/: joystick.hpp  scan_ops.hpp
glug_input/include/glug_input/keyboard/: keyboard.h  keyboard.hpp  keys.h  keys.hpp  locks.h  locks.hpp  mods.h  mods.hpp
glug_input/include/glug_input/mouse/: buttons.h  buttons.hpp  mouse.h  mouse.hpp  point.hpp
glug_input/include/glug_input/util/: significant_bit.hpp
glug_input/src/: CMakeLists.txt
glug_input/src/event/: event_queue.cpp
glug_input/src/joystick/: joystick.cpp  joystick_impl.cpp  joystick_impl.hpp
glug_input/src/joystick/macos/: joystick_macos.cpp  joystick_macos.hpp  scoped_cf.hpp
glug_input/src/keyboard/: key_util.c  key_util.cpp  key_util.h  key_util.hpp  keyboard.c  keyboard.cpp  keyboard_plat.h  keyboard_plat.hpp  lock_util.cpp  lock_util.h  lock_util.hpp  locks.cpp  mod_util.cpp  mod_util.h  mod_util.hpp  mods.cpp
glug_input/src/keyboard/macos/: key_defs.h  key_defs.hpp  key_macos.c  key_macos.cpp  keyboard_macos.c  keyboard_macos.cpp  lock_defs.hpp  lock_macos.c  lock_macos.cpp  mod_macos.c  mod_macos.cpp
glug_input/src/keyboard/win32/: key_defs.h  key_defs.hpp  key_win32.c  key_win32.cpp  keyboard_win32.c  keyboard_win32.cpp  lock_win32.c  lock_win32.cpp  mod_win32.c  mod_win32.cpp
glug_input/src/keyboard/x11/: key_defs.hpp  key_x11.c  key_x11.cpp  keyboard_x11.c  keyboard_x11.cpp  lock_x11.c  lock_x11.cpp  mod_x11.c  mod_x11.cpp
glug_input/src/mouse/: button_util.cpp  button_util.h  button_util.hpp  buttons.cpp  mouse.c  mouse.cpp  mouse_plat.h  mouse_plat.hpp
glug_input/src/mouse/macos/: button_macos.c  button_macos.cpp  mouse_macos.c  mouse_macos.cpp
glug_input/src/mouse/win32/: button_win32.c  button_win32.cpp  mouse_win32.c  mouse_win32.cpp
glug_input/src/mouse/x11/: button_x11.c  button_x11.cpp  mouse_x11.c  mouse_x11.cpp
input++/include/input++/: config.hpp  export.hpp
